--- a/sampleApp/ClientApp/package.json
+++ b/sampleApp/ClientApp/package.json
@@ -6,12 +6,14 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.0.1",
     "babel-runtime": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.4.0",
+    "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "2.16.0",
-    "react-app-rewired": "^1.5.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "react-scripts-ts": "2.16.0"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
@@ -20,11 +22,17 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.10",
     "@types/jest": "^23.0.2",
     "@types/node": "^10.3.2",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "@types/react-router-dom": "^4.2.7",
+    "@types/react-test-renderer": "^16.0.1",
+    "react-test-renderer": "^16.4.0",
     "typescript": "^2.9.1"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.ts"
   }
 }
