--- a/sampleApp/ClientApp/package.json
+++ b/sampleApp/ClientApp/package.json
@@ -6,8 +6,11 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.0.1",
     "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.1.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "react": "^16.4.0",
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.0",
